[css] small img fix to remove whitespace gap

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -62,6 +62,7 @@ figure {
 
 img {
   width: 100%;
+  display: block; // to remove the small gap when there's whitespace between twi image tags
 }
 
 .page > * {
